# mutuelle-core

./: .env.development  .env.example  .env.production  .gitignore  .nixpacks.toml  .render.yaml  .renderignore  DEPLOY_CHECKLIST.md  Procfile  README.md  adaptateur_evolution.py  adapter_vues_templates.py  affecter_verifications_final_corrige.py  affecter_verifications_manquantes.py  affecter_verifications_reel_final.py  affichage_unifie.py  ajout_automatique.py  ajouter_koffitanoh_agent_final.py  alternative_fix.sh  ameliorer_pieces_jointes.py  analyse_projet.py  analyse_simple.sh  app.py  apply_railway_vars.sh  assigner_groupes.py  associate_agents.py  associer_agents.py  auto_test_railway.py  build.sh  build_and_run.sh  build_railway.sh  calcul_scores_manquants.py  calcul_scores_manquants_corrige.py  calculateur_scoring_corrige.py  chasse_occurrences.py  check.sh  check_csrf.py  check_deployment.py  check_paiement_system.py  check_production.py  (+317 more)
agents/: admin.py  admin_views.py  affichage_unifie.py  analysis_script.py  apps.py  context_processors.py  forms.py  models.py  urls.py  urls.py.backup_existing  views.py  views.py.backup  views_corrige.py
api/: apps.py  docs.py  serializers.py  serializers_mobile.py  urls.py  urls_mobile.py  views.py  views_mobile.py
assureur/: admin.py  apps.py  decorators.py  forms.py  forms.py.backup  models.py  services.py  signals.py  tests.py  urls.py  utils.py  views.py  views.py.backup  views_correction.py  views_selection.py
communication/: admin.py  admin_backup_final.py  admin_views.py  api_views.py  apps.py  consumers.py  (+11 more)
(+1589 files in other folders)
