[tool.poetry]
name = "mutuelle-core"
version = "0.1.0"
description = "Système de gestion mutuelle"
authors = ["Votre Nom <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.2.6"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.4.0"
django-crispy-forms = "^2.2"
crispy-bootstrap5 = "^0.7"
whitenoise = "^6.7.0"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
channels = "^4.1.0"
django-extensions = "^3.2.3"
Pillow = "^10.3.0"
psycopg2-binary = "^2.9.10"
redis = "^5.0.1"
celery = "^5.3.6"
django-celery-beat = "^2.6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"
pytest = "^7.4.4"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
